--- a/docs/changelog/2.0.0.md
+++ b/docs/changelog/2.0.0.md
@@ -1,3 +1,12 @@
 ### 2.0.0
 
 _Not Released Yet_
+
+## Improvements
+
+- Migrated to [JSpecify](https://jspecify.dev/) for nullability annotations.
+
+## Breaking Changes
+
+- The migration to JSpecify annotations for nullability might cause some
+  incompatibilities with existing tooling.
